|
Quick Lists
|
|
Bug ID:
|
6663848
|
|
Votes
|
0
|
|
Synopsis
|
assert(i < Max(),"oob") in C2 with -Xcomp
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
b10
|
|
Release Fixed
|
hs13(b01),
6u14(b01) (Bug ID:2174895)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
3-Medium
|
|
Related Bugs
|
|
|
Submit Date
|
15-FEB-2008
|
|
Description
|
The following assertion is observed at least on linux-i586/amd64 with both JDK 6u10 (1.6.0_10-ea-b10) and JDK 7 (1.7.0-ea-b24):
# src/share/vm/opto/block.hpp:60)
# assert(i < Max(),"oob")
It occurs only in -Xcomp mode. Only C2 is affected.
Product build crashes during execution.
Testcase and hs_err file are attached.
Posted Date : 2008-02-15 16:41:38.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
NeverBranchNodes should have ideal methods which allow them to fold up and they should also participate in the malformed control flow bailout checks.
Posted Date : 2008-04-24 20:56:12.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |