6663848: assert(i < Max(),"oob") in C2 with -Xcomp

NeverBranchNodes aren't handled properly

Reviewed-by: kvn, sgoldman, rasbold, jrose